--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
+
+	<h1>Jocular-Guacamole</h1>
+
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+	<footer>
+		<p>Site by Ryan, Kristen and Drew</p>
+	</footer>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
